[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "roms2schism"
version = "0.9.2"
description = "A Python package for creating SCHISM boundary condition forcing and hotstart files from ROMS output"
readme = "README.md"
authors = [
  {name = "Ivica Janekovic", email = "ivica.janekovic@uwa.edu.au"},
  {name = "Adrian Croucher", email = "a.croucher@auckland.ac.nz"}
]
license = {file = "LICENSE"}
requires-python = ">=3.6"
dependencies = [
  "progressbar2",
  "netCDF4",
  "numpy",
  "scipy",
  "matplotlib"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
  "Operating System :: OS Independent"
]

[project.urls]
repository = "https://github.com/ivicajan/ROMS2SCHISM"


